content: use new Cogl API to know if a sink is ready

https://bugzilla.gnome.org/show_bug.cgi?id=704853